src/test/deca/syntax/parser/invalid/or_expr_without_an_op.deca
// Test parser, or sans opérande de gauche

{
    if (x || ){
        x = 5;
    }
}